--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,10 @@
+
+
+<%= render "layouts/header" %>
+
+
+
+
 <!-- Place <div> tag where you want the feed to appear -->
 <div id="curator-feed-mens-lifestylesatiresports"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
 <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
