boostrap and testing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,10 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script type="text/javascript">
-      // curator-feed-mens-lifestylesatiresports
+      // curator-feed-tech
       (function(){
           var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
-          i.src = "https://cdn.curator.io/published/cddc395e-e4f7-471f-92a8-1588d057.js";
+          i.src = "https://cdn.curator.io/published/ca7b64ba-896c-4820-9991-a276fed4.js";
           e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
       })();
   </script>
