--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,18 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- waterfall10 -->
   <script type="text/javascript">
-      // curator-feed-tech
+      // waterfall-10
       (function(){
           var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
           i.src = "https://cdn.curator.io/published/ca7b64ba-896c-4820-9991-a276fed4.js";
           e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
       })();
   </script>
+
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
