--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,17 @@
 
 
 <%= render "layouts/header" %>
-<div class="container">
-<div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-  </p>
+<div class="container-fluid">
+    <div class="jumbotron">
+      <h1 class="display-4">Post Cable, Aggregator</h1>
+      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <hr class="my-4">
+      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+    </div>
 </div>
 
+<h1 align="center"><span class="badge badge-secondary">Trending in Tech</span></h1>
+<P></P>
 <!-- Place <div> tag where you want the feed to appear -->
-<div id="curator-feed-tech"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>  <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+<div id="waterfall-10"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
 
-</div>
