--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- waterfall10 -->
+  <!-- waterfall10-Tech Homepage -->
   <script type="text/javascript">
       // waterfall-10
       (function(){
