--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- waterfall10-Tech Homepage -->
+
   <script type="text/javascript">
       // waterfall-10
       (function(){
           var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
           i.src = "https://cdn.curator.io/published/ca7b64ba-896c-4820-9991-a276fed4.js";
+          e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+      })();
+  </script>
+
+
+  <!-- waterfall culture homepage -->
+  <script type="text/javascript">
+      // curator-feed-culture
+      (function(){
+          var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+          i.src = "https://cdn.curator.io/published/4a7db784-bcd2-438c-abc1-97194a0a.js";
           e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
       })();
   </script>
