--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,13 +3,18 @@
 <%= render "layouts/header" %>
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Fluid jumbotron</h1>
-    <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+    <h1 class="display-4">Curated Video Network</h1>
+    <p class="lead">Watch content, curated from the spaces you love.</p>
   </div>
 </div>
 
 <h1 align="center"><span class="badge badge-secondary">Trending in Tech</span></h1>
 <P></P>
 <!-- Place <div> tag where you want the feed to appear -->
-<div id="waterfall-10"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+<div id="waterfall-10"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Magic</a></div>
 
+
+<h1 align="center"><span class="badge badge-secondary">Trending in Culture</span></h1>
+<P></P>
+<!-- Place <div> tag where you want the feed to appear -->
+<div id="curator-feed-culture"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Magic</a></div>
