--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,16 @@
   </script>
 
 
+  <!-- waterfall network-news -->
+  <script type="text/javascript">
+      // network-news
+      (function(){
+          var i, e, d = document, s = "script";i = d.createElement("script");i.async = 1;
+          i.src = "https://cdn.curator.io/published/f96d97d8-cd65-4162-90a9-a578bda2.js";
+          e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+      })();
+  </script>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
