--- a/app/views/pages/network.html.erb
+++ b/app/views/pages/network.html.erb
@@ -5,4 +5,4 @@
     <!--<p class="lead">Watch content, curated from the spaces you love.</p> -->
   </div>
 </div>
-<div id="network-news"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+<div id="network-news"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Magic</a></div>
