--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,10 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" <%= link_to 'Network News', pages_network_path %></a>
+        <a class="nav-link" <%= link_to 'Network', pages_network_path %></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" <%= link_to 'Culture', pages_culture_path %></a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
