--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
 <%= render "layouts/header" %>
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Curated Video Network</h1>
-    <p class="lead">Watch content, curated from the spaces you love.</p>
+    <h1 class="display-4">Welcome to the Post Cable Era</h1>
+    <p class="lead">On demand video news network focused on covering the topics we love most.</p>
   </div>
 </div>
 
