--- a/app/views/pages/network.html.erb
+++ b/app/views/pages/network.html.erb
@@ -1,8 +1,11 @@
 <%= render "layouts/header" %>
 <div class="jumbotron jumbotron-fluid2">
   <div class="container">
-    <h1 class="display-4">Major Network News</h1>
+    <h1 class="display-4">Network</h1>
     <!--<p class="lead">Watch content, curated from the spaces you love.</p> -->
+
+
+    <!-- Insert DIV tag for Magic News -->
   </div>
 </div>
 <div id="network-news"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Magic</a></div>
