--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,9 @@
     })();
 </script>
 
+<!-- The Javascript can be moved to the end of the html page before the </body> tag -->
+
+
 
 <!-- waterfall culture homepage -->
 <script type="text/javascript">
