--- a/app/views/pages/technology.html.erb
+++ b/app/views/pages/technology.html.erb
@@ -3,3 +3,8 @@
   <div class="container">
     <h1 class="display-4">Technology</h1>
     <!--<p class="lead">Watch content, curated from the spaces you love.</p> -->
+  </div>
+</div>
+
+    <!-- Place <div> tag where you want the feed to appear -->
+    <div id="waterfall-10"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
