--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,9 @@
       <li class="nav-item">
         <a class="nav-link" <%= link_to 'Food', pages_food_path %></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" <%= link_to 'Technology', pages_technology_path %></a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Topics
