--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,18 @@
       <li class="nav-item">
         <a class="nav-link" <%= link_to 'Technology', pages_technology_path %></a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" <%= link_to 'Sports', pages_technology_path %></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" <%= link_to 'Business & Entrepenuer', pages_technology_path %></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" <%= link_to 'Mens Lifestyle', pages_technology_path %></a>
+      </li>
+       <li class="nav-item">
+        <a class="nav-link" <%= link_to 'Socal / Entertainment', pages_technology_path %></a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Topics
